--- a/Figma-Task-1/index3.html
+++ b/Figma-Task-1/index3.html
@@ -17,7 +17,7 @@
 <div class="container-fluid">
     <section class="section-bg">
         
-        <header class="manu1">
+        <header class="top-menu">
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div class="container-fluid">
                   <img class="bella navbar-brand" src="images/Bella.png">
